# pdevisualizer

./: .gitignore  .readthedocs.yaml  README.md  demo_boundary_conditions.py  demo_parameter_exploration.py  enhanced_visualizations_demo.py  install_production_files.sh  pyproject.toml  quick_setup.sh
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  changelog.rst  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst
docs/api/: boundary_conditions.rst  enhanced_visualizations.rst  heat2d.rst  parameter_exploration.rst  solver.rst  wave2d.rst
docs/examples/: index.rst
docs/tutorials/: index.rst
src/pdevisualizer/: __init__.py  boundary_conditions.py  enhanced_visualizations.py  heat2d.py  parameter_exploration.py  solver.py  wave2d.py
tests/: conftest.py  integration_test_demo.py  test_boundary_conditions.py  test_boundary_fixes.py  test_enhanced_visualizations.py  test_enum_fix.py  test_heat2d.py  test_parameter_exploration.py  test_solver.py  test_unified_simple.py  test_wave2d.py
